Added main topics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
         <link href = "style.css" type = "text/css" rel = "stylesheet"/>
     </head>
     <body>
-        <h5>Hello</h5>
+        <div class = "block">
+            Intro
+        </div>
+        <div class = "block">
+            Work Experience
+        </div>
+        <div class = "block">
+            Academic Journey
+        </div>
+        <div class = "block">
+            Personal
+        </div>
     </body>
 </html>
