--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
         <link href = "style.css" type = "text/css" rel = "stylesheet"/>
     </head>
     <body>
-        <div class = "block">
-            Intro
+        <div class = "block intro">
+            <div class = "image about">
+                <img src = "me.JPG" alt = "me"/>
+            </div>
+            <div class = "about">
+                <p>
+                    Hello, 
+                </p>
+            </div>
         </div>
-        <div class = "block">
+        <div class = "block work">
             Work Experience
         </div>
-        <div class = "block">
+        <div class = "block academic">
             Academic Journey
         </div>
-        <div class = "block">
+        <div class = "block personal">
             Personal
         </div>
     </body>
