Added intro paragraph

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Jaynti Raj</title>
         <link href = "style.css" type = "text/css" rel = "stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=BioRhyme:400,700,800" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
     </head>
     <body>
         <div class="dark_blue stripe"> 
@@ -14,6 +16,26 @@
 
         </div>
         <div class="light_blue stripe">
+
+            <div class="intro">
+                <p>
+                    Hello, my name is <span class="name">Jaynti Raj</span>
+                </br>
+                    <span class="intro_para"> 
+                        I was born in Mountainview, California, and I grew up in Bangalore, India.
+                        I'm a Computer Science major at UCI, specializing in Intelligent Systems.
+                        I'm currently interested in:
+                        <ul>
+                            <li>React.js</li>
+                            <li>Android app development</li>
+                            <li>Computer vision</li>
+                            <li>An internship for Summer, 2019!</li>
+                            <li>Passing my classes</li>
+                        </ul>
+
+                    </span>
+                </p>
+            </div>
 
                 
             
