--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <title>Jaynti Raj</title>
         <link href = "style.css" type = "text/css" rel = "stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=BioRhyme:400,700,800" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet"/>
     </head>
     <body>
         <div class="dark_blue stripe"> 
